--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 			crossorigin="anonymous"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+		/>
 		<link rel="stylesheet" href="scss/style.css" />
 	</head>
 	<body>
+		<!-- Navegation -->
 		<nav class="navbar navbar-expand-lg navbar-light menu">
 			<div class="container">
 				<a class="navbar-brand" href="#"><img src="/images/logo.png" alt="">LIMA</a>
@@ -46,6 +51,7 @@
 				</div>
 			</div>
 		</nav>
+		<div class="container"></div>
 		<!-- Home page -->
 		<main id="hero">
 			<div class="container">
@@ -61,6 +67,27 @@
 			</div>
 			<img src="/images/webdev.png" alt="tablet" />
 		</main>
+		<!-- Footer -->
+		<footer class="bg-light text-center">
+			<div class="social-media p-4">
+				<!-- Linkedin -->
+				<div class="icons">
+					<a href="https://www.linkedin.com/in/luciano-lima-647712164/">
+						<i class="fab fa-linkedin fa-2x"></i>
+					</a>
+				</div>
+				<div class="icons">
+					<!-- Github -->
+					<a
+						href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31"
+					>
+						<i class="fab fa-github fa-2x"></i>
+					</a>
+				</div>
+				<!-- Copyright -->
+				<div class="text-center p-3 text-muted">© Designed & built by Luciano Lima</div>
+			</div>
+		</footer>
 		<!-- Bootstrap -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
