--- a/index.html
+++ b/index.html
@@ -67,6 +67,41 @@
 			</div>
 			<img src="/images/webdev.png" alt="tablet" />
 		</main>
+		<!-- About section -->
+		<section id="about">
+			<h1 class="lg-heading">
+				About
+				<span class="text-secondary">Me</span>
+			</h1>
+			<div class="about-info js-scroll slide-in-bottom">
+				<img
+					src="/images/luciano_Lima.jpeg"
+					class="js-scroll slide-in-left"
+					alt="perfil photo"
+				/>
+				<div class="bio">
+					<div class="js-scroll slide-in-right">
+						<h2>Hello, I'm Luciano Lima</h2>
+						<p>
+							I'm a self-taught Front End Web Developer and school-taught BTech,
+							System Analysis and Developement born in Brazil but living in
+							London for the last 15 years. 
+							<p>I've been<strong>'Making Things Happen</strong> 
+							since 2017; a year later I've decided to take a step further joining Code Institute where I got 
+							a Credencial Diploma in Full Stack Web Developement.
+							
+						</p>
+						</p>
+						<p class="lead">
+							If you are a business seeking a web presence or an employer
+							looking to hire, you can get in touch with me
+							<a href="#contact"><i class="fas fa-envelope"></i></a>
+						</p>
+						<p class="text-center"><strong>Download My Resume</strong><i class="fas fa-download"></i></p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- Footer -->
 		<footer class="bg-light text-center">
 			<div class="social-media p-4">
