Updating classes name to BEM methodologys

--- a/index.html
+++ b/index.html
@@ -51,78 +51,84 @@
 				</div>
 			</div>
 		</nav>
-		<div class="container"></div>
-		<!-- Home page -->
-		<main id="hero">
+		<div class="wrapper">
+			<!-- Home page -->
 			<div class="container">
-				<col class="md-6">
-			</div>
-			<div class="hero-heading">
-				<p class="lead">An Independent Creative Web Developer</p>
-				<h1 class="lg-heading">
-					<span class="main-text"></span>
-					<br />
-					<div class="text-secondary">since 2017</div>
-				</h1>
-			</div>
-			<img src="/images/webdev.png" alt="tablet" />
-		</main>
-		<!-- About section -->
-		<section id="about">
-			<h1 class="lg-heading">
-				About
-				<span class="text-secondary">Me</span>
-			</h1>
-			<div class="about-info js-scroll slide-in-bottom">
-				<img
-					src="/images/luciano_Lima.jpeg"
-					class="js-scroll slide-in-left"
-					alt="perfil photo"
-				/>
-				<div class="bio">
-					<div class="js-scroll slide-in-right">
-						<h2>Hello, I'm Luciano Lima</h2>
-						<p>
-							I'm a self-taught Front End Web Developer and school-taught BTech,
-							System Analysis and Developement born in Brazil but living in
-							London for the last 15 years. 
-							<p>I've been<strong>'Making Things Happen</strong> 
-							since 2017; a year later I've decided to take a step further joining Code Institute where I got 
-							a Credencial Diploma in Full Stack Web Developement.
-							
-						</p>
-						</p>
-						<p class="lead">
-							If you are a business seeking a web presence or an employer
-							looking to hire, you can get in touch with me
-							<a href="#contact"><i class="fas fa-envelope"></i></a>
-						</p>
-						<p class="text-center"><strong>Download My Resume</strong><i class="fas fa-download"></i></p>
+				<div class="hero">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="hero__heading">
+								<p class="hero__lead">an independent creative web developer</p>
+								<h1 class="hero__lg-heading">
+									<span class="hero__main-text">making things happen</span>
+									<br>
+									<div class="hero__text-secondary">since 2017</div>
+								</h1>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<img class="img-fluid" src="images/webdev.png" alt="web-developer">
+						</div>
 					</div>
 				</div>
 			</div>
-		</section>
-		<!-- Footer -->
-		<footer class="bg-light text-center">
-			<div class="social-media p-4">
-				<!-- Linkedin -->
-				<div class="icons">
-					<a href="https://www.linkedin.com/in/luciano-lima-647712164/">
-						<i class="fab fa-linkedin fa-2x"></i>
-					</a>
+			<!-- About section -->
+			<section id="about">
+				<h1 class="lg-heading">
+					About
+					<span class="text-secondary">Me</span>
+				</h1>
+				<div class="about-info js-scroll slide-in-bottom">
+					<img
+						src="/images/luciano_Lima.jpeg"
+						class="js-scroll slide-in-left"
+						alt="perfil photo"
+					/>
+					<div class="bio">
+						<div class="js-scroll slide-in-right">
+							<h2>Hello, I'm Luciano Lima</h2>
+							<p>
+								I'm a self-taught Front End Web Developer and school-taught BTech,
+								System Analysis and Developement born in Brazil but living in
+								London for the last 15 years. 
+								<p>I've been<strong>'Making Things Happen</strong> 
+								since 2017; a year later I've decided to take a step further joining Code Institute where I got 
+								a Credencial Diploma in Full Stack Web Developement.
+								
+							</p>
+							</p>
+							<p class="lead">
+								If you are a business seeking a web presence or an employer
+								looking to hire, you can get in touch with me
+								<a href="#contact"><i class="fas fa-envelope"></i></a>
+							</p>
+							<p class="text-center"><strong>Download My Resume</strong><i class="fas fa-download"></i></p>
+						</div>
+					</div>
 				</div>
-				<div class="icons">
-					<!-- Github -->
-					<a
-						href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31"
-					>
-						<i class="fab fa-github fa-2x"></i>
-					</a>
+			</section>
+			<!-- Footer -->
+			<footer class="bg-light text-center">
+				<div class="social-media p-4">
+					<!-- Linkedin -->
+					<div class="icons">
+						<a href="https://www.linkedin.com/in/luciano-lima-647712164/">
+							<i class="fab fa-linkedin fa-2x"></i>
+						</a>
+					</div>
+					<div class="icons">
+						<!-- Github -->
+						<a
+							href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31"
+						>
+							<i class="fab fa-github fa-2x"></i>
+						</a>
+					</div>
+					<!-- Copyright -->
+					<div class="text-center p-3 text-muted">© Designed & built by Luciano Lima</div>
 				</div>
-				<!-- Copyright -->
-				<div class="text-center p-3 text-muted">© Designed & built by Luciano Lima</div>
-			</div>
-		</footer>
+			</footer>
+		</div>
 		<!-- Bootstrap -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
