--- a/index.html
+++ b/index.html
@@ -18,62 +18,63 @@
 		<link rel="stylesheet" href="scss/style.css" />
 	</head>
 	<body>
-		<!-- Navegation -->
-		<nav class="navbar navbar-expand-lg navbar-light menu">
-			<div class="container">
-				<a class="navbar-brand" href="#"><img src="/images/logo.png" alt="">LIMA</a>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-					<ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">about</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">portfolio</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">contact</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
 		<div class="wrapper">
+			<!-- Navegation -->
+			<nav class="navbar navbar-expand-lg navbar-light menu">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="#"><img src="/images/logo.png" alt="">LIMA</a>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+						<ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="#">home</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">about</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">portfolio</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">contact</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		
 			<!-- Home page -->
-			<div class="container">
+			<div class="container-fluid">
 				<div class="hero">
 					<div class="row">
-						<div class="col-md-6">
-							<div class="hero__heading">
-								<p class="hero__lead">an independent creative web developer</p>
-								<h1 class="hero__lg-heading">
-									<span class="hero__main-text">making things happen</span>
+						<div class="col-lg-6 col-md-12 text-center">
+							<!-- <div class="hero__heading"> -->
+								<span class="hero__lead">an independent creative<br>web developer</span>
+								<h1 class="hero__lead--heading">
+									<span class="hero__lead--show-text">making things happen</span>
 									<br>
-									<div class="hero__text-secondary">since 2017</div>
+									<span class="hero__lead">since 2017</span>
 								</h1>
-							</div>
+							<!-- </div> -->
 						</div>
-						<div class="col-md-6">
-							<img class="img-fluid" src="images/webdev.png" alt="web-developer">
+						<div class="col-lg-6 col-md-12 text-center">
+							<img class="img-fluid" src="images/responsive-designs.png" alt="web-developer">
 						</div>
 					</div>
 				</div>
 			</div>
 			<!-- About section -->
-			<section id="about">
+			<!-- <section id="about">
 				<h1 class="lg-heading">
 					About
 					<span class="text-secondary">Me</span>
@@ -106,7 +107,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 			<!-- Footer -->
 			<footer class="bg-light text-center">
 				<div class="social-media p-4">
