Updating BEM classes and creating About section

--- a/index.html
+++ b/index.html
@@ -58,14 +58,9 @@
 				<div class="hero">
 					<div class="row">
 						<div class="col-lg-6 col-md-12 text-center">
-							<!-- <div class="hero__heading"> -->
-								<span class="hero__lead">an independent creative<br>web developer</span>
-								<h1 class="hero__lead--heading">
-									<span class="hero__lead--show-text">making things happen</span>
-									<br>
-									<span class="hero__lead">since 2017</span>
-								</h1>
-							<!-- </div> -->
+							<span class="hero__text">an independent creative<br>web developer</span>
+							<h1 class="hero__heading">making things happen</h1><br>
+							<span class="hero__text">since 2017</span>	
 						</div>
 						<div class="col-lg-6 col-md-12 text-center">
 							<img class="img-fluid" src="images/responsive-designs.png" alt="web-developer">
@@ -74,50 +69,54 @@
 				</div>
 			</div>
 			<!-- About section -->
-			<!-- <section id="about">
-				<h1 class="lg-heading">
-					About
-					<span class="text-secondary">Me</span>
-				</h1>
-				<div class="about-info js-scroll slide-in-bottom">
-					<img
-						src="/images/luciano_Lima.jpeg"
-						class="js-scroll slide-in-left"
-						alt="perfil photo"
-					/>
-					<div class="bio">
-						<div class="js-scroll slide-in-right">
-							<h2>Hello, I'm Luciano Lima</h2>
-							<p>
-								I'm a self-taught Front End Web Developer and school-taught BTech,
-								System Analysis and Developement born in Brazil but living in
-								London for the last 15 years. 
-								<p>I've been<strong>'Making Things Happen</strong> 
-								since 2017; a year later I've decided to take a step further joining Code Institute where I got 
-								a Credencial Diploma in Full Stack Web Developement.
-								
-							</p>
-							</p>
-							<p class="lead">
-								If you are a business seeking a web presence or an employer
-								looking to hire, you can get in touch with me
-								<a href="#contact"><i class="fas fa-envelope"></i></a>
-							</p>
-							<p class="text-center"><strong>Download My Resume</strong><i class="fas fa-download"></i></p>
+			<div class="container-fluid">
+				<section id="about">
+					<h1 class="about__heading">
+						About
+						<span class="about__heading--text">Me</span>
+					</h1>
+					<div class="row">
+						<!-- <div class="about-info js-scroll slide-in-bottom"> -->
+							<div class="col-lg-6 col-md-12">
+								<img
+									src="/images/luciano_Lima.jpeg"
+									class="js-scroll slide-in-left"
+									alt="perfil photo"
+								/>
+							</div>
+							<!-- <div class="js-scroll slide-in-right"> -->
+								<div class="col-lg-6 col-md-12">
+									<h2>Hello, I'm Luciano Lima</h2>
+									<p>
+										I'm a self-taught Front End Web Developer and school-taught BTech,
+										System Analysis and Developement born in Brazil but living in
+										London for the last 15 years. 
+										<p>I've been<strong>'Making Things Happen</strong> 
+										since 2017; a year later I've decided to take a step further joining Code Institute where I got 
+										a Credencial Diploma in Full Stack Web Developement.</p>
+									</p>
+									<p class="lead">
+										If you are a business seeking a web presence or an employer
+										looking to hire, you can get in touch with me
+										<a href="#contact"><i class="fas fa-envelope"></i></a>
+									</p>
+									<p class="text-center"><strong>Download My Resume</strong><i class="fas fa-download"></i></p>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-			</section> -->
+				</section>
+			</div>
 			<!-- Footer -->
-			<footer class="bg-light text-center">
-				<div class="social-media p-4">
+			<footer class="footer text-center">
+				<div class="footer__social-media p-4">
 					<!-- Linkedin -->
-					<div class="icons">
+					<div class="footer__icons">
 						<a href="https://www.linkedin.com/in/luciano-lima-647712164/">
 							<i class="fab fa-linkedin fa-2x"></i>
 						</a>
 					</div>
-					<div class="icons">
+					<div class="fotter__icons">
 						<!-- Github -->
 						<a
 							href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31"
@@ -126,7 +125,7 @@
 						</a>
 					</div>
 					<!-- Copyright -->
-					<div class="text-center p-3 text-muted">© Designed & built by Luciano Lima</div>
+					<span class="text-center p-3 text-muted">© Designed & built by Luciano Lima</span>
 				</div>
 			</footer>
 		</div>
