Changed colums layout to use bootstrap grid system

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			</div>
 			<!-- About section -->
 			<div class="container-fluid">
-				<section id="about">
+				<section class="about">
 					<h1 class="about__heading">
 						About
 						<span class="about__heading--text">Me</span>
@@ -78,7 +78,8 @@
 					<div class="row">
 						<!-- <div class="about-info js-scroll slide-in-bottom"> -->
 							<div class="col-lg-6 col-md-12">
-								<img
+								<img 
+									class="about__img"
 									src="/images/luciano_Lima.jpeg"
 									class="js-scroll slide-in-left"
 									alt="perfil photo"
