Finish styling the about section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-						<ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+						<ul class="navbar-nav ml-auto mb-lg-0">
 							<li class="nav-item">
 								<a class="nav-link active" aria-current="page" href="#">home</a>
 							</li>
@@ -57,13 +57,13 @@
 			<div class="container-fluid">
 				<div class="hero">
 					<div class="row">
-						<div class="col-lg-6 col-md-12 text-center">
+						<div class="col-lg-6 col-md-12 text-center hero__first-columm">
 							<span class="hero__text">an independent creative<br>web developer</span>
 							<h1 class="hero__heading">making things happen</h1><br>
 							<span class="hero__text">since 2017</span>	
 						</div>
-						<div class="col-lg-6 col-md-12 text-center">
-							<img class="img-fluid" src="images/responsive-designs.png" alt="web-developer">
+						<div class="col-lg-6 col-md-12 hero__secound-columm">
+							<img class="img-fluid hero__img" src="images/responsive-designs.png" alt="web-developer">
 						</div>
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 					</h1>
 					<div class="row">
 						<!-- <div class="about-info js-scroll slide-in-bottom"> -->
-							<div class="col-lg-6 col-md-12">
+							<div class="col-lg-6 col-md-12 about__first-columm">
 								<img 
 									class="about__img"
 									src="/images/luciano_Lima.jpeg"
@@ -86,7 +86,7 @@
 								/>
 							</div>
 							<!-- <div class="js-scroll slide-in-right"> -->
-								<div class="col-lg-6 col-md-12">
+								<div class="col-lg-6 col-md-12 about__secound-columm">
 									<h2>Hello, I'm Luciano Lima</h2>
 									<p>
 										I'm a self-taught Front End Web Developer and school-taught BTech,
@@ -96,12 +96,12 @@
 										since 2017; a year later I've decided to take a step further joining Code Institute where I got 
 										a Credencial Diploma in Full Stack Web Developement.</p>
 									</p>
-									<p class="lead">
+									<p class="about__get-in-touch">
 										If you are a business seeking a web presence or an employer
 										looking to hire, you can get in touch with me
 										<a href="#contact"><i class="fas fa-envelope"></i></a>
 									</p>
-									<p class="text-center"><strong>Download My Resume</strong><i class="fas fa-download"></i></p>
+									<p><strong>Download My Resume</strong><i class="fas fa-download"></i></p>
 								</div>
 							</div>
 						</div>
@@ -109,26 +109,26 @@
 				</section>
 			</div>
 			<!-- Footer -->
-			<footer class="footer text-center">
+			<!-- <footer class="footer text-center">
 				<div class="footer__social-media p-4">
 					<!-- Linkedin -->
-					<div class="footer__icons">
+					<!-- <div class="footer__icons">
 						<a href="https://www.linkedin.com/in/luciano-lima-647712164/">
 							<i class="fab fa-linkedin fa-2x"></i>
 						</a>
 					</div>
-					<div class="fotter__icons">
+					<div class="fotter__icons"> -->
 						<!-- Github -->
-						<a
+						<!-- <a
 							href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31"
 						>
 							<i class="fab fa-github fa-2x"></i>
 						</a>
-					</div>
+					</div> -->
 					<!-- Copyright -->
-					<span class="text-center p-3 text-muted">© Designed & built by Luciano Lima</span>
-				</div>
-			</footer>
+					<!-- <span class="text-center p-3 text-muted">© Designed & built by Luciano Lima</span> -->
+				<!-- </div> -->
+			</footer> -->
 		</div>
 		<!-- Bootstrap -->
 		<script
