--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto mb-lg-0">
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">home</a>
+								<a class="nav-link active" aria-current="page" href="#hero">home</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#about">about</a>
@@ -54,8 +54,8 @@
 			</nav>
 		
 			<!-- Home page -->
-			<div class="container-fluid">
-				<section class="hero">
+			<!-- <div class="container-fluid"> -->
+				<section class="hero" id="hero">
 					<div class="row">
 						<div class="col-lg-6 col-md-12 text-center hero__first-columm">
 							<span class="hero__text">an independent creative<br>web developer</span>
@@ -67,9 +67,9 @@
 						</div>
 					</div>
 				</section>
-			</div>
+			<!-- </div> -->
 			<!-- About section -->
-			<div class="container-fluid">
+			<!-- <div class="container-fluid"> -->
 				<section id="about" class="about">
 					<h1 class="about__heading">About
 						<span class="about__heading--text">Me</span>
@@ -105,7 +105,7 @@
 						<!-- </div> -->
 					</div>
 				</section>
-			</div>
+			<!-- </div> -->
 			<!-- Portfolio section -->
 			<section id="portfolio" class="portfolio">
 				<h3 class="portfolio__heading">my
@@ -252,27 +252,61 @@
 					</div>
 				</div>
 			</section>
+			<!-- Contact section -->
+			<section id="contact" class="contact">
+				<h4 class="contact__heading">Contact
+					<span class="contact__heading--text">Me</span>
+				</h4>
+				<div class="contact__form js-scroll slide-in-bottom">
+					<form id="contact__Form" action="" method="POST">
+						<input type="hidden" name="contact__Form" value="" />
+						<div class="contact__form__group">
+							<label for="id_name" class="contact__form__group--label requiredField">
+								Name<span class="asteriskField">*</span>
+							</label>
+							<div class="contact__form__group">
+								<input type="text" name="name" maxlength="100" class="contact__form__group--control form-control" required id="id_name"/>
+							</div>
+						</div>
+						<div class="contact__form__group">
+							<label for="id_email" class="contact__form__group--label requiredField">
+								Email<span class="asteriskField">*</span>
+							</label>
+							<div class="contact__form__group">
+								<input type="email" name="email" class="contact__form__group--control form-control" required id="id_email"/>
+							</div>
+						</div>
+						<div class="contact__form__group">
+							<label for="id_message" class="contact__form__group--label requiredField">
+								Message<span class="asteriskField">*</span>
+							</label>
+							<div class="contact__form__group">
+								<textarea name="message" cols="40" rows="10" class="contact__form__group--control--control textarea form-control" required id="id_message" ></textarea>
+							</div>
+						</div>
+						<button type="submit" class="contact__form__group--btn btn btn-secondary" id="sendMessageButton">Submit</button>
+					</form>
+				</div>
+			</section>
 			<!-- Footer -->
-			<!-- <footer class="footer text-center">
+			<footer class="footer text-center">
 				<div class="footer__social-media p-4">
 					<!-- Linkedin -->
-					<!-- <div class="footer__icons">
+					<div class="footer__icons">
 						<a href="https://www.linkedin.com/in/luciano-lima-647712164/">
 							<i class="fab fa-linkedin fa-2x"></i>
 						</a>
 					</div>
-					<div class="fotter__icons"> -->
+					<div class="fotter__icons">
 						<!-- Github -->
-						<!-- <a
-							href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31"
-						>
+						<a href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31"></a>
 							<i class="fab fa-github fa-2x"></i>
-						</a>
-					</div> -->
+						</a> 
+					</div> 
 					<!-- Copyright -->
-					<!-- <span class="text-center p-3 text-muted">© Designed & built by Luciano Lima</span> -->
-				<!-- </div> -->
-			<!-- </footer>  -->
+					<span class="text-center p-3 text-muted">© Designed & built by Luciano Lima</span>
+				</div>
+			</footer> 
 		</div>
 		<!-- Bootstrap -->
 		<script
