changed hero img

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<div class="portfolio__card-body card-body">
 								<h5 class="portfolio__card-title card-title">caly hair</h5>
 								<p class="portfolio__card-text card-text">A project created for a hair stylist</p>
-								<p>Skills Used</p>
+								<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 								<ul class="portfolio__list list-group list-group-flush">
 									<li class="portfolio__list portfolio__list--item list-group-item">phython - django - heroku</li>
 									<li class="portfolio__list portfolio__list--item list-group-item">javascrip - bootstrap - html - css</li>
@@ -142,7 +142,7 @@
 							<div class="portfolio__card-body card-body">
 								<h5 class="portfolio__card-title card-title">queen</h5>
 								<p class="portfolio__card-text card-text">Code Institute First Milestone</p>
-								<p>Skills Used</p>
+								<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 								<ul class="portfolio__list list-group list-group-flush">
 									<li class="portfolio__list portfolio__list--item list-group-item">html - css</li>
 									<li class="portfolio__list portfolio__list--item list-group-item">jquery - bootstrap</li>
@@ -165,7 +165,7 @@
 							<div class="portfolio__card-body card-body">
 								<h5 class="portfolio__card-title card-title">ftt-lifestyle</h5>
 								<p class="portfolio__card-text card-text">Fitness & Health Lifestyle</p>
-								<p>Skills Used</p>
+								<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 								<ul class="portfolio__list list-group list-group-flush">
 									<li class="portfolio__list portfolio__list--item list-group-item">html - scss - email-js</li>
 									<li class="portfolio__list portfolio__list--item list-group-item">javascrip - bootstrap</li>
@@ -188,7 +188,7 @@
 							<div class="portfolio__card-body card-body">
 								<h5 class="portfolio__card-title card-title">my cookbook</h5>
 								<p class="portfolio__card-text card-text">Code Institute Third Milestone</p>
-								<p>Skills Used</p>
+								<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 								<ul class="portfolio__list list-group list-group-flush">
 									<li class="portfolio__list portfolio__list--item list-group-item">phython - flask - mongoDB - jinja2</li>
 									<li class="portfolio__list portfolio__list--item list-group-item">aws clauld9 - javascrip - bootstrap</li>
@@ -211,7 +211,7 @@
 							<div class="portfolio__card-body card-body">
 								<h5 class="portfolio__card-title card-title">amo hair salon</h5>
 								<p class="portfolio__card-text card-text">A project created for a Hair Salon</p>
-								<p>Skills Used</p>
+								<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 								<ul class="portfolio__list list-group list-group-flush">
 									<li class="portfolio__list portfolio__list--item list-group-item">phython - django - heroku - amazon s3</li>
 									<li class="portfolio__list portfolio__list--item list-group-item">javascrip - bootstrap - css</li>
@@ -234,7 +234,7 @@
 							<div class="portfolio__card-body card-body">
 								<h5 class="portfolio__card-title card-title">Ecommerce</h5>
 								<p class="portfolio__card-text card-text">Code Institute Forth Milestone</p>
-								<p>Skills Used</p>
+								<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 								<ul class="portfolio__list list-group list-group-flush">
 									<li class="portfolio__list portfolio__list--item list-group-item">phython - django - heroku - amazon s3</li>
 									<li class="portfolio__list portfolio__list--item list-group-item">strip API - javascrip - bootstrap</li>
