Removed divs from footer

--- a/index.html
+++ b/index.html
@@ -292,20 +292,16 @@
 			<footer class="footer text-center">
 				<div class="footer__social-media p-4">
 					<!-- Linkedin -->
-					<div class="footer__icons">
-						<a href="https://www.linkedin.com/in/luciano-lima-647712164/">
+						<a class="footer__icon" href="https://www.linkedin.com/in/luciano-lima-647712164/" target="_blank">
 							<i class="fab fa-linkedin fa-2x"></i>
 						</a>
-					</div>
-					<div class="fotter__icons">
 						<!-- Github -->
-						<a href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31"></a>
+						<a class="footer__icon" href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31" target="_blank">
 							<i class="fab fa-github fa-2x"></i>
 						</a> 
-					</div> 
 					<!-- Copyright -->
-					<span class="text-center p-3 text-muted">© Designed & built by Luciano Lima</span>
 				</div>
+				<span class="footer__copyright text-center p-3">© Designed & built by Luciano Lima</span>
 			</footer> 
 		</div>
 		<!-- Bootstrap -->
