Adding extra colums for the about me

--- a/index.html
+++ b/index.html
@@ -88,20 +88,27 @@
 							<div class="col-lg-6 col-md-12 about__secound-column">
 								<h2>Hello, I'm Luciano Lima</h2>
 								<p>
-									I'm a self-taught Front End Web Developer and school-taught BTech,
-									System Analysis and Developement born in Brazil but living in
+									I'm a self-taught <em><strong>Web Developer</strong> and school-taught <strong>BTech,
+									System Analysis & Developement</strong></em> born in Brazil but living in
 									London for the last 15 years. 
 									<p>I've been<strong>'Making Things Happen</strong> 
 									since 2017; a year later I've decided to take a step further joining Code Institute where I got 
-									a Credencial Diploma in Full Stack Web Developement.</p>
+									a Credencial Diploma in <em><strong> Full Stack Web Developement.</strong></em></p>
 								</p>
-								<p class="about__get-in-touch">
-									If you are a business seeking a web presence or an employer
-									looking to hire, you can get in touch with me
-									<a href="#contact"><i class="fas fa-envelope"></i></a>
-								</p>
-								<p><strong>Download My Resume</strong><i class="fas fa-download"></i></p>
+								<div class="row">
+									<div class="col-lg-6 col-md-12">
+										<p class="about__get-in-touch">
+											If you are a business seeking web presence or an employer
+											looking to hire: <br>Get in touch with me
+											<a href="#contact"><img class="about__email" src="/images/e-mail.png" alt="email box"></a>
+										</p>
+									</div>
+									<div class="col-lg-6 col-md-12">
+										<p>Download My Resume<i class="fas fa-download"></i></p>
+									</div>
+								</div>
 							</div>
+						</div>
 						<!-- </div> -->
 					</div>
 				</section>
@@ -135,6 +142,7 @@
 							</div>
 						</div>
 					</div>
+					
 					<!-- Queem -->
 					<div class="col-md-4 col-sm-12">
 						<div class="portfolio__card card text-center">
@@ -181,6 +189,11 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<br>
+				<!-- *********************** First 3 rows ************************-->
+				
+				<div class="row">
 					<!-- Cookbook -->
 					<div class="col-md-4 col-sm-12">
 						<div class="portfolio__card card text-center">
@@ -284,7 +297,7 @@
 								<textarea name="message" cols="40" rows="10" class="contact__form__group--control--control textarea form-control" required id="id_message" ></textarea>
 							</div>
 						</div>
-						<button type="submit" class="contact__form__group--btn btn btn-secondary" id="sendMessageButton">Submit</button>
+						<button type="submit" class="portfolio__button portfolio__button--contact btn btn-secondary" id="sendMessageButton">Submit</button>
 					</form>
 				</div>
 			</section>
@@ -293,7 +306,7 @@
 				<div class="footer__social-media p-4">
 					<!-- Linkedin -->
 						<a class="footer__icon" href="https://www.linkedin.com/in/luciano-lima-647712164/" target="_blank">
-							<i class="fab fa-linkedin fa-2x"></i>
+							<i class="fab fa-linkedin fa-2x "></i>
 						</a>
 						<!-- Github -->
 						<a class="footer__icon" href="https://github.com/Luciano-Lima?tab=overview&from=2019-01-01&to=2019-01-31" target="_blank">
