Adding grid to about section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 						</div>
 						<div class="col-lg-6 col-md-12 hero__secound-columm">
 							<img class="img-fluid hero__img" src="images/responsive-designs.png" alt="web-developer">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#deb887" fill-opacity="0.1" d="M0,64L60,80C120,96,240,128,360,133.3C480,139,600,117,720,96C840,75,960,53,1080,58.7C1200,64,1320,96,1380,112L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 						</div>
 					</div>
 				</section>
@@ -95,16 +96,16 @@
 									since 2017; a year later I've decided to take a step further joining Code Institute where I got 
 									a Credencial Diploma in <em><strong> Full Stack Web Developement.</strong></em></p>
 								</p>
-								<div class="row">
+								<div class="row row-small-fs">
 									<div class="col-lg-6 col-md-12">
 										<p class="about__get-in-touch">
 											If you are a business seeking web presence or an employer
-											looking to hire: <br>Get in touch with me
+											looking to hire: <br>Get in touch with me<br>
 											<a href="#contact"><img class="about__email" src="/images/e-mail.png" alt="email box"></a>
 										</p>
 									</div>
-									<div class="col-lg-6 col-md-12">
-										<p>Download My Resume<i class="fas fa-download"></i></p>
+									<div class="col-lg-6 col-md-12 about__get-in-touch--align-middle">
+										<p>Download My Resume<br><i class="fas fa-download"></i></p>
 									</div>
 								</div>
 							</div>
